--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -42,12 +42,7 @@ jobs:
       with:
         app-name: aatiwarishub-python-linux
         general-settings-json: '{"linuxFxVersion": "PYTHON|3.7"}' #'General configuration settings as Key Value pairs'
-
-    # deploy web app
-    - uses: azure/webapps-deploy@v1
-      with:
-        app-name: aatiwarishub-python-linux
-        package: .
+        app-settings-json: '[{ "name": "SCM_DO_BUILD_DURING_DEPLOYMENT", "value": "true" }]'
 
     # Azure logout
     - name: logout
