--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,22 +17,6 @@ jobs:
     # checkout the repo
     - uses: actions/checkout@master
 
-    # setup python
-    - name: Setup Python 3.7
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.7
-
-    # install dependencies
-    - name: python install
-      working-directory: .
-      run: |
-        sudo apt install python3.7-venv
-        python -m venv --copies antenv
-        source antenv/bin/activate
-        pip install setuptools
-        pip install -r requirements.txt
-
     # Azure login
     - uses: azure/login@v1
       with:
@@ -42,7 +26,7 @@ jobs:
       with:
         app-name: aatiwarishub-python-linux
         general-settings-json: '{"linuxFxVersion": "PYTHON|3.7"}' #'General configuration settings as Key Value pairs'
-        app-settings-json: '[{ "name": "SCM_DO_BUILD_DURING_DEPLOYMENT", "value": "true" }]'
+        app-settings-json: '[{ "name": "SCM_DO_BUILD_DURING_DEPLOYMENT", "value": "false" }]'
 
     # Azure logout
     - name: logout
