--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,7 +21,7 @@ jobs:
     - uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS_4f3604aa }}
-    - run: echo ::set-output name=scm_do_build::$( az webapp config appsettings list --name aatiwarishub-python-linux --resource-group aatiwarishub-rg --query "[?name == 'SCM_DO_BUILD_DURING_DEPLOYMENT'].value" }}
+    - run: echo ::set-output name=scm_do_build::$( az webapp config appsettings list --name aatiwarishub-python-linux --resource-group aatiwarishub-rg --query "[?name == 'SCM_DO_BUILD_DURING_DEPLOYMENT'].value")
     - uses: azure/appservice-settings@v1
       with:
         app-name: aatiwarishub-python-linux
