--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,13 +21,14 @@ jobs:
     - uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS_4f3604aa }}
+    - run: az webapp config appsettings list --name aatiwarishub-python-linux --resource-group aatiwarishub-rg --query "[?name == 'SCM_DO_BUILD_DURING_DEPLOYMENT'].value"
     - run: echo ::set-output name=scm_do_build::$( az webapp config appsettings list --name aatiwarishub-python-linux --resource-group aatiwarishub-rg --query "[?name == 'SCM_DO_BUILD_DURING_DEPLOYMENT'].value")
     - uses: azure/appservice-settings@v1
       with:
         app-name: aatiwarishub-python-linux
         general-settings-json: '{"linuxFxVersion": "PYTHON|3.7"}' #'General configuration settings as Key Value pairs'
         app-settings-json: '[{ "name": "SCM_DO_BUILD_DURING_DEPLOYMENT", "value": "false" }]'
-    - run: echo "${scm_do_build}"
+    - run: echo " values of scm do build is ${scm_do_build}"
     # Azure logout
     - name: logout
       run: |
