--- a/.github/workflows/workflow (7).yml
+++ b/.github/workflows/workflow (7).yml
@@ -37,7 +37,7 @@ jobs:
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v2
       with:
-        name: python-app
+        name: webapp
         path: |
           .
           !venv/
