--- a/.github/workflows/workflow-7a27.yml
+++ b/.github/workflows/workflow-7a27.yml
@@ -9,7 +9,7 @@ on:
 name: Build and deploy Python app
 jobs:
  build:
-  runs-on: ubuntu-latest
+  runs-on: ubuntu-18.04
   steps:
   # checkout the repo 
   - uses: actions/checkout@master
